--- a/nextjs/translations/pt.json
+++ b/nextjs/translations/pt.json
@@ -51,6 +51,9 @@
         },
         "payments": {
             "label": "Pagamentos"
+        },
+        "admin": {
+            "label": "Admin"
         }
     },
     "AppFooterNewsletter": {
