--- a/nextjs/translations/pt.json
+++ b/nextjs/translations/pt.json
@@ -135,7 +135,17 @@
         "statistics": "Estatísticas",
         "news": "Notícias",
         "agenda": "Agenda",
-        "videos": "Vídeos"
+        "videos": "Vídeos",
+        "guidelines": "Consensos",
+        "publications": "Publicações",
+        "courses": "Palestras & Cursos",
+        "awards": "Prémios SPG",
+        "grants": "Bolsas de Investigação",
+        "topics": "Tópicos",
+        "testimonials": "Testemunhos",
+        "tributes": "Homenagens",
+        "users": "Sócios",
+        "payments": "Pagamentos"
     },
     "none-1": {},
     "none-2": {},
